<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <LinearLayout
        android:id="@+id/credentialsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/first_name_hint"
            android:minHeight="48dp"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/last_name_hint"
            android:minHeight="48dp"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:padding="10sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentialsContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>